crates/pcb-zen-core/tests/snapshots/input__config_allowed_invalid_value.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 1378
expression: output
---
Error: top.zen:7:1-35 Error instantiating `Module`
Error: /Module.zen:5:1-8 invalid value for config `package`: got "0805"; expected one of "0402", "0603"
