crates/pcb-zen-core/tests/snapshots/input__config_allowed_unsupported_type.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 813
expression: output
---
Error: test.zen:5:9-9:2 config `value` uses unsupported type for `allowed`: expected str, int, float, bool, enum, or physical value type
