crates/pcb-zen-core/tests/snapshots/input__config_convert_chain.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "converted_value": "FrozenValue(StarlarkFloat(10.0))",
        },
    },
}
[]
