crates/pcb-zen-core/tests/snapshots/input__config_convert_preserves_correct_types.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "converter_called": "FrozenValue(StarlarkBool(false))",
            "voltage_unit": "FrozenValue(\"V\")",
            "voltage_value": "FrozenValue(StarlarkFloat(5.0))",
        },
    },
}
[]
