crates/pcb-zen-core/tests/snapshots/input__config_convert_with_default.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "name_value": "FrozenValue(\"value_42\")",
        },
    },
}
[]
