crates/pcb-zen-core/tests/snapshots/input__config_convert_with_enum.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "heading_is_north": "FrozenValue(StarlarkBool(true))",
        },
    },
}
[]
