crates/pcb-zen-core/tests/snapshots/input__config_default_implies_optional_in_signature.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[
    ParameterInfo {
        name: "led_color",
        type_info: String,
        required: false,
        default_value: Some(
            String("green"),
        ),
        default_display: Some(
            "\"green\"",
        ),
        help: None,
    },
]
