crates/pcb-zen-core/tests/snapshots/input__config_int_to_float_conversion.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    test: Module {
        path: test,
        source: "/Module.zen",
        properties: {
            "current_multiplied": "FrozenValue(StarlarkFloat(3.0))",
            "current_type": "FrozenValue(\"float\")",
            "current_value": "FrozenValue(StarlarkFloat(2.0))",
            "power_is_none": "FrozenValue(StarlarkBool(true))",
            "voltage_divided": "FrozenValue(StarlarkFloat(2.5))",
            "voltage_type": "FrozenValue(\"float\")",
            "voltage_value": "FrozenValue(StarlarkFloat(5.0))",
        },
    },
}
[]
